tests/ui/async-await/issue-86507.no_drop_tracking.stderr
error: future cannot be sent between threads safely
  --> $DIR/issue-86507.rs:20:13
   |
LL | /             Box::pin(
LL | |                 async move {
LL | |                     let x = x;
LL | |                 }
LL | |             )
   | |_____________^ future created by async block is not `Send`
   |
note: captured value is not `Send` because `&` references cannot be sent unless their referent is `Sync`
  --> $DIR/issue-86507.rs:22:29
   |
LL |                     let x = x;
   |                             ^ has type `&T` which is not `Send`, because `T` is not `Sync`
   = note: required for the cast from `[async block@$DIR/issue-86507.rs:21:17: 23:18]` to the object type `dyn Future<Output = ()> + Send`
help: consider further restricting this bound
   |
LL |     fn bar<'me, 'async_trait, T: Send + std::marker::Sync>(x: &'me T)
   |                                       +++++++++++++++++++

error: aborting due to previous error

